Paso 3 Lisa completo!

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
-RUN mkdir General Lisa Homer
+RUN mkdir Characters Homer Lisa
 
 COPY . .
 
